OD-676 [Fix] Adjusted bookmark position on tablet/web for Directory layout (#652)
* fixed bookmark position

* fix position

--- a/css/layout-css/small-card-style.upload.css
+++ b/css/layout-css/small-card-style.upload.css
@@ -770,7 +770,8 @@
 
 @media screen and (min-width: 640px) {
   .small-card-list-detail-content-wrapper .small-card-bookmark-holder {
-    top: -35px;
+    top: 20px;
+    left: 40px;
     padding: 0px;
   }
 }
@@ -1242,11 +1243,11 @@
   .small-card-detail-wrapper .small-card-list-detail-image-wrapper + .small-card-list-detail-content-scroll-wrapper .small-card-list-detail-content-wrapper,
   .small-card-detail-overlay.ready .small-card-detail-wrapper .small-card-list-detail-image-wrapper + .small-card-list-detail-content-scroll-wrapper .small-card-list-detail-content-wrapper {
     top: 0;
-    padding: 20px 15px;
+    padding: 40px 40px;
   }
 
   .small-card-detail-overlay.ready .small-card-detail-wrapper .small-card-list-detail-image-wrapper + .small-card-list-detail-content-scroll-wrapper .small-card-list-detail-content-wrapper {
-    padding: 40px;
+    padding: 60px 40px 40px 40px;
     border-radius: 0;
   }
 
